--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,9 @@
     "url": "git+https://github.com/creativetimofficial/material-dashboard-react.git"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.13.0",
     "@emotion/cache": "11.10.8",
-    "@emotion/react": "11.10.8",
+    "@emotion/react": "^11.10.8",
     "@emotion/styled": "11.10.8",
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.3",
