--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
-    "socket.io": "^4.7.5"
+    "nanoid": "^5.1.5",
+    "socket.io": "^4.7.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
